--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,42 +2,50 @@ version: '3.1'
 
 services: 
     db:
-        image: mysql:8
+        image: mysql:5.7
+        restart: always
         environment:
-            MYSQL_ROOT_PASSWORD: root
-            MYSQL_USER: dbuser
-            MYSQL_PASSWORD: dbuserpwd
-            MYSQL_DATABASE: boilerplate_db
-        ports:
-            - "3306:3306"
+            MYSQL_DATABASE: data_logs
+            MYSQL_USER: admin
+            MYSQL_PASSWORD: password
+            MYSQL_ROOT_PASSWORD: password
         volumes:
             - db_data:/var/lib/mysql
         networks:
             - nodeapp
-        expose:
-            - "3306"
     node:
         depends_on:
             - db
         image: "node:10"
-        user: "node"     
+        user: "node"
+        environment:
+            - NODE_ENV=development
         restart: always
         working_dir: /home/node/app
-        environment:
-            - NODE_ENV=production
-            - DB_HOST=db
-            - DB_NAME=${MYSQL_DATABASE}
-            - DB_USER=root
-            - DB_PASSWORD=${MYSQL_ROOT_PASSWORD}
         volumes:
             - ./:/home/node/app
         ports:
+            - "8081:80"
+        command: ["./wait-for-it.sh", "db:3306", "--", "npm", "start"]
+        networks:
+            - nodeapp
+        environment:
+            DATABASE_HOST: db
+            DATABASE_NAME: data_logs
+            DATABASE_USER: admin
+            DATABASE_PASS: password
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        ports: 
             - "8080:80"
-        command: "npm start"
+        depends_on:
+            - db
+        environment: 
+            PMA_HOST: db:3306
+            MYSQL_ROOT_PASSWORD: password
         networks:
             - nodeapp
 networks:
     nodeapp:
-        driver: 'bridge'
 volumes:
     db_data:
