--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jeere/Node-MQTT-Broker#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "mqtt": "^3.0.0",
     "mysql": "^2.17.1"
   }
